crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__image_url_with_detail.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: content_part
---
{
  "type": "image_url",
  "image_url": {
    "url": "https://example.com/high-res.jpg"
  }
}
