crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__message_mixed_content.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "assistant",
  "content": [
    {
      "type": "text",
      "text": "Here's the architectural diagram you requested:\nThe diagram shows the main components..."
    },
    {
      "type": "image_url",
      "image_url": {
        "url": "https://example.com/diagram.png"
      }
    }
  ]
}
