crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__message_with_multiple_images.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "user",
  "content": [
    {
      "type": "text",
      "text": "Here are multiple images"
    },
    {
      "type": "image_url",
      "image_url": {
        "url": "https://example.com/image2.jpg"
      }
    },
    {
      "type": "image_url",
      "image_url": {
        "url": "https://example.com/image1.jpg"
      }
    }
  ]
}
