crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__message_with_single_image.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "user",
  "content": [
    {
      "type": "text",
      "text": "Check out this image"
    },
    {
      "type": "image_url",
      "image_url": {
        "url": "https://example.com/image.jpg"
      }
    }
  ]
}
